✨ fix: adjust chat badge padding for improved alignment
Increase top and bottom padding from 0px to 1px. This change ensures better visual alignment and enhances the overall appearance of chat badges.

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1834,7 +1834,7 @@ tr.dead span {
 [class^="chat-badge-"] {
   display: inline-block;
   height: 18px;
-  padding: 0px 6px;
+  padding: 1px 6px;
   font-size: 10px;
   background-color: transparent;
   border-radius: 9px;
